--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,6 +60,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--color-white-2);
+  margin:18px;
 }
 
 code {
