--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,3 +74,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.fs-12{
+  font-size: 13px;
+}
